# native-engine-turbomodule-poc

./: .gitignore  README.md  package.json
apps/mobile/: README.md  index.README.md  index.js  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: README.md  gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/src/: App.README.md  App.tsx  README.md  index.README.md  index.js
apps/mobile/src/api/: EngineApi.README.md  EngineApi.ts  README.md
apps/mobile/src/components/: README.md  ResultCard.README.md  ResultCard.tsx
apps/mobile/src/native/: NativeEngineModule.README.md  NativeEngineModule.ts  README.md
apps/mobile/src/specs/: NativeEngine.README.md  NativeEngine.ts  README.md
docs/: API_CONTRACT.md  ARCHITECTURE.md  BRIDGE_COMPARISON.md  BUILD_AND_RUN.md  CALL_FLOW.md  CONFIG_AND_BUILD_FILES.md  FILE_README_INDEX.md  LOGGING_GUIDE.md  MANAGER_LEARNINGS.md  MERMAID_SEQUENCE_DIAGRAMS.md  SOURCE_FILE_GUIDE.md  TURBOMODULE_FLOW.md
native/android-wrapper/: README.md  build.gradle  settings.gradle
native/android-wrapper/src/main/cpp/: CMakeLists.README.md  CMakeLists.txt  README.md  native_engine_jni.README.md  native_engine_jni.cpp
native/core-engine/: README.md
native/core-engine/include/generic_engine/: README.md  engine.README.md  engine.h
native/core-engine/src/: README.md  engine.README.md  engine.cpp
native/core-engine/tests/: README.md  engine_test.README.md  engine_test.cpp
scripts/: README.md  android-env.README.md  android-env.sh  test-core-engine.README.md  test-core-engine.sh
(+19 files in other folders)
